[metadata]
name = python-ml-dali
version = 0.0.3
description = A Python library to communicate with Dali controllers from Ministry of Light.
long_description = file:README.md
long_description_content_type = text/markdown
license = GNU GPLv3
classifiers =
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Development Status :: 2 - Pre-Alpha
        Framework :: AsyncIO
        Intended Audience :: Developers
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Natural Language :: English
        Topic :: Software Development :: Libraries :: Python Modules
url = https://github.com/benoitdepaire/python-ml-dali
author = Benoit Depaire
author_email = benoit@depaire.net


[options]
packages = mldali
install_requires =
        asyncio
        pyserial
        aioserial
python_requires = >=3.8